# partitions

./: .gitignore  README.md  partitions.cabal
app/: Main.hs
src/Data/: Partitions.hs
test/: Spec.hs
