name:                partitions
version:             0.1.0.0
synopsis:            Set partitioning functions.
description:         Please see README.md
homepage:            http://github.com/kludgy/partitions#readme
license:             BSD3
license-file:        LICENSE
author:              Darren Grant
maintainer:          dedgrant@gmail.com
copyright:           2016 Darren Grant
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Partitions
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

executable partitions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , partitions
  default-language:    Haskell2010

test-suite partitions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , partitions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kludgy/partitions
